<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory
        android:title="@string/pref_category_datatx_title"
        android:key="@string/pref_category_datatx_key">

        <EditTextPreference
            android:title="@string/pref_http_title"
            android:key="@string/pref_http_key"
            android:defaultValue="@string/pref_http_default"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_serial_title"
        android:key="@string/pref_category_serial_key">

        <EditTextPreference
            android:title="@string/pref_serial_baudrate_title"
            android:key="@string/pref_serial_baudrate_key"
            android:defaultValue="@string/pref_serial_baudrate_default"
            />
    </PreferenceCategory>

</PreferenceScreen>